--- a/config/examples/example_2/deployments.yaml
+++ b/config/examples/example_2/deployments.yaml
@@ -7,7 +7,7 @@ metadata:
   labels:
     component: metrics-collector
 spec:
-  replicas: 4
+  replicas: 3
   selector:
     matchLabels:
       component: metrics-collector
@@ -19,11 +19,12 @@ spec:
       containers:
         - name: collector
           image: alpine
-          command:
-            - sh
-            - -c
+          command: ["/bin/sh", "-c"]
+          args:
             - |
-              echo "collector running..."; while true; do sleep 3600; done
+              trap "echo 'process stopped'; exit 1" TERM INT;
+              echo "collector running...";
+              while true; do sleep 3600; done
 ---
 # target
 apiVersion: apps/v1
@@ -46,10 +47,11 @@ spec:
       containers:
         - name: nginx
           image: alpine
-          command:
-            - sh
-            - -c
+          command: ["/bin/sh", "-c"]
+          args:
             - |
+              trap "echo 'process stopped'; exit 1" TERM INT;
+              echo "collector running...";
               while true; do sleep 3600; done
 ---
 # target
@@ -73,8 +75,9 @@ spec:
       containers:
         - name: nginx
           image: alpine
-          command:
-            - sh
-            - -c
+          command: ["/bin/sh", "-c"]
+          args:
             - |
+              trap "echo 'process stopped'; exit 1" TERM INT;
+              echo "collector running...";
               while true; do sleep 3600; done
