--- a/config/examples/example_2/deployments.yaml
+++ b/config/examples/example_2/deployments.yaml
@@ -19,12 +19,7 @@ spec:
       containers:
         - name: collector
           image: alpine
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              trap "echo 'process stopped'; exit 1" TERM INT;
-              echo "collector running...";
-              while true; do sleep 3600; done
+          command: ["sleep", "3600"]
 ---
 # target
 apiVersion: apps/v1
@@ -47,12 +42,7 @@ spec:
       containers:
         - name: nginx
           image: alpine
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              trap "echo 'process stopped'; exit 1" TERM INT;
-              echo "collector running...";
-              while true; do sleep 3600; done
+          command: ["sleep", "3600"]
 ---
 # target
 apiVersion: apps/v1
@@ -75,9 +65,4 @@ spec:
       containers:
         - name: nginx
           image: alpine
-          command: ["/bin/sh", "-c"]
-          args:
-            - |
-              trap "echo 'process stopped'; exit 1" TERM INT;
-              echo "collector running...";
-              while true; do sleep 3600; done
+          command: ["sleep", "3600"]
