--- a/config/examples/example_2/deployments.yaml
+++ b/config/examples/example_2/deployments.yaml
@@ -19,7 +19,7 @@ spec:
       containers:
         - name: collector
           image: ubuntu
-          command: ["sleep", "3600"]
+          command: ["yes"]
 ---
 # target
 apiVersion: apps/v1
@@ -42,8 +42,7 @@ spec:
       containers:
         - name: nginx
           image: ubuntu
-          command: ["sleep", "3600"]
----
+          command: ["yes"]
 # target
 apiVersion: apps/v1
 kind: Deployment
@@ -65,4 +64,4 @@ spec:
       containers:
         - name: nginx
           image: ubuntu
-          command: ["sleep", "3600"]
+          command: ["yes"]
